--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.5
+  string_similarity: ^2.0.0
   #https://pub.dev/packages/http/install
 
   # The following adds the Cupertino Icons font to your application.
